--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
