--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "google_next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+   "name": "sht_labs",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "autoprefixer": "^10.4.19",
+      "next": "14.2.3",
+      "react": "^18",
+      "react-dom": "^18",
+      "react-icons": "^5.2.0"
+   },
+   "devDependencies": {
+      "eslint": "^8",
+      "eslint-config-next": "14.2.3",
+      "postcss": "^8",
+      "tailwindcss": "^3.4.1"
+   }
 }
