--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
    },
    "dependencies": {
       "autoprefixer": "^10.4.19",
+      "html-react-parser": "^5.1.10",
       "next": "14.2.3",
       "react": "^18",
       "react-dom": "^18",
